# hnread

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bot.py  makefile  pyproject.toml
hnread/: __init__.py  filters.py  items.py  repos.py  services.py  topics.py
tests/: test_bot.py  test_filters.py  test_hnread.py  test_items.py  test_repos.py  test_topic.py
