[tool.poetry]
name = "hnread"
version = "0.1.0"
description = "A telegram hacker news puslisher"
authors = ["DPR <dpr-0xff@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
devtools = "^0.8.0"
httpx = "^0.23.0"
python-telegram-bot = "^13.12"
python-decouple = "^3.6"
types-redis = "^4.2.7"
redis = "^4.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
click = "8.0.4"
black = "^22.3.0"
isort = "^5.10.1"
poetry = "^1.1.13"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
