[tool.poetry]
name = "hnread"
version = "0.1.0"
description = "A telegram hacker news puslisher"
authors = ["DPR <dpr-0xff@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
devtools = "^0.8.0"
httpx = "^0.23.0"
python-telegram-bot = "^13.12"
python-decouple = "^3.6"
types-redis = "^4.2.7"
redis = "^4.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
click = "^8.1.3"
isort = "^5.11.4"
mypy = "^0.991"
commitizen = "^2.39.1"
pre-commit = "^2.21.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
